--- a/index.html
+++ b/index.html
@@ -1,50 +1,139 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Pyne2014 : Site da Python Nordeste 2014  http://2014.pythonnordeste.org  " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="assets/images/favicon.png">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <title>Python Nordeste 2014</title>
 
-    <title>Pyne2014</title>
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+
+    <!-- Fonts from Google Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/pythonNordeste/pyne2014">View on GitHub</a>
-
-          <h1 id="project_title">Pyne2014</h1>
-          <h2 id="project_tagline">Site da Python Nordeste 2014  http://2014.pythonnordeste.org  </h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/pythonNordeste/pyne2014/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/pythonNordeste/pyne2014/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><b>FLATTY</b></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/#evento">Evento</a></li>
+            <li><a href="/#palestrantes">Palestrantes</a></li>
+            <li><a href="/#programacao">Programação</a></li>
+            <li><a href="/#inscricoes">Inscrições</a></li>
+            <li><a href="/#local">Local</a></li>
+            <li><a href="/#patrocinadores">Patrocinadores</a></li>
+            <li><a href="/hoteis">Hotéis</a></li>
+            <li><a href="#contato">Contato</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-      </section>
+    <div id="headerwrap" class="full-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>Python Nordeste</h1>
+          </div><!-- /col-lg-6 -->
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </div><!-- /headerwrap -->
+
+    <article class="container about">
+      <div class="">
+          <h2>O evento</h2>
+          <p>A Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Em um contexto bem diversificado e totalmente dedicado a troca
+          de experiências e conhecimento, o evento é empenhado tanto para os novos usuários quanto para desenvolvedores plenos. A Python Nordeste possui um código de conduta que assegura a todos os participantes um ambiente livre de preconceitos, possibilitando a abordagem amigável de qualquer tema dentro do universo Python.</p>
+          <p>O encontro visa difundir tal plataforma entre as universidades, empresas, e ao mesmo tempo discutir assuntos relacionados a Software Livre, estimulando assim a disseminação da cultura agregada ao tema e na divulgação e estímulo de desenvolvimento na região nordeste.</p>
+      </div>
+    </article>
+
+    <div class="speakers full-bg">
+
+      <article class="container">
+          <div class="row centered">
+              <h2>Keynotes</h2>
+
+              <figure class="speaker-info col-lg-3">
+                <div class="speaker-rounded david">
+                  <div class="speaker-networks">
+                  </div>
+                </div>
+                <figcaption class="at-caption">
+                    <h4 class="at-member-name">David Cramer</h4>
+                    <p>Dropbox</p>
+                </figcaption>
+              </figure>
+
+              <figure class="speaker-info col-lg-3">
+                <div class="speaker-rounded medina">
+                  <div class="speaker-networks">
+                  </div>
+                </div>
+                <figcaption class="at-caption">
+                    <h4 class="at-member-name">Andrews Medina</h4>
+                    <p>Globo.com</p>
+                </figcaption>
+              </figure>
+
+              <figure class="speaker-info col-lg-3">
+                <div class="speaker-rounded tupy">
+                  <div class="speaker-networks">
+                  </div>
+                </div>
+                <figcaption class="at-caption">
+                    <h4 class="at-member-name">Tupy</h4>
+                    <p>JusBrasil</p>
+                </figcaption>
+              </figure>
+
+              <figure class="speaker-info col-lg-3">
+                <div class="speaker-rounded david">
+                  <div class="speaker-networks">
+                  </div>
+                </div>
+                <figcaption class="at-caption">
+                    <h4 class="at-member-name">Unknow</h4>
+                    <p>Unknow</p>
+                </figcaption>
+            </figure>
+          </div>
+      </article>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Pyne2014 maintained by <a href="https://github.com/pythonNordeste">pythonNordeste</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+    <article class="container">
+      <hr>
+      <p class="centered">Created by BlackTie.co - Attribution License 3.0 - 2013</p>
+    </article><!-- /container -->
 
-    
 
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
+
