Adds logo. Improvements in the js minify

--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/#evento">Evento</a></li>
             <li><a href="/#palestrantes">Palestrantes</a></li>
-            <li><a href="/#programacao">Programação</a></li>
-            <li><a href="/#inscricoes">Inscrições</a></li>
-            <li><a href="/#local">Local</a></li>
+            <li><a href="/#inscricoes">Inscreva-se</a></li>
+            <li><a href="/#inscricoes">Submissão de palestras</a></li>
             <li><a href="/#patrocinadores">Patrocinadores</a></li>
-            <li><a href="/hoteis">Hotéis</a></li>
             <li><a href="#contato">Contato</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -53,10 +51,8 @@
 
     <div id="headerwrap" class="full-bg">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <h1>Python Nordeste</h1>
-          </div><!-- /col-lg-6 -->
+        <div class="row centered">
+          <img src="assets/images/logo.png" alt="Python Nordeste 2014">
         </div><!-- /row -->
       </div><!-- /container -->
     </div><!-- /headerwrap -->
@@ -64,64 +60,84 @@
     <article class="container about">
       <div class="">
           <h2>O evento</h2>
-          <p>A Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Em um contexto bem diversificado e totalmente dedicado a troca
-          de experiências e conhecimento, o evento é empenhado tanto para os novos usuários quanto para desenvolvedores plenos. A Python Nordeste possui um código de conduta que assegura a todos os participantes um ambiente livre de preconceitos, possibilitando a abordagem amigável de qualquer tema dentro do universo Python.</p>
-          <p>O encontro visa difundir tal plataforma entre as universidades, empresas, e ao mesmo tempo discutir assuntos relacionados a Software Livre, estimulando assim a disseminação da cultura agregada ao tema e na divulgação e estímulo de desenvolvimento na região nordeste.</p>
+          <h4>Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Nessa edição, trazemos</h4>
       </div>
     </article>
 
     <div class="speakers full-bg">
 
       <article class="container">
-          <div class="row centered">
-              <h2>Keynotes</h2>
 
-              <figure class="speaker-info col-lg-3">
-                <div class="speaker-rounded david">
-                  <div class="speaker-networks">
-                  </div>
-                </div>
-                <figcaption class="at-caption">
-                    <h4 class="at-member-name">David Cramer</h4>
-                    <p>Dropbox</p>
-                </figcaption>
-              </figure>
+        <div class="row centered">
+            <h2>Keynotes</h2>
 
-              <figure class="speaker-info col-lg-3">
-                <div class="speaker-rounded medina">
-                  <div class="speaker-networks">
-                  </div>
+            <figure class="speaker-info col-lg-3">
+              <div class="speaker-rounded medina">
+                <div class="speaker-networks">
+                  <a href="https://github.com/andrewsmedina" target="_blank"><i class="icon-github-circled"></i></a>
+                  <a href="https://twitter.com/andrewsmedina" target="_blank"><i class="icon-twitter"></i></a>
                 </div>
-                <figcaption class="at-caption">
-                    <h4 class="at-member-name">Andrews Medina</h4>
-                    <p>Globo.com</p>
-                </figcaption>
-              </figure>
-
-              <figure class="speaker-info col-lg-3">
-                <div class="speaker-rounded tupy">
-                  <div class="speaker-networks">
-                  </div>
-                </div>
-                <figcaption class="at-caption">
-                    <h4 class="at-member-name">Tupy</h4>
-                    <p>JusBrasil</p>
-                </figcaption>
-              </figure>
-
-              <figure class="speaker-info col-lg-3">
-                <div class="speaker-rounded david">
-                  <div class="speaker-networks">
-                  </div>
-                </div>
-                <figcaption class="at-caption">
-                    <h4 class="at-member-name">Unknow</h4>
-                    <p>Unknow</p>
-                </figcaption>
+              </div>
+              <figcaption class="at-caption">
+                  <h4 class="at-member-name">Andrews Medina</h4>
+                  <p>Globo.com</p>
+              </figcaption>
             </figure>
-          </div>
+
+            <figure class="speaker-info col-lg-3">
+              <div class="speaker-rounded david">
+                <div class="speaker-networks">
+                  <a href="https://github.com/dcramer" target="_blank"><i class="icon-github-circled"></i></a>
+                  <a href="https://twitter.com/zeeg" target="_blank"><i class="icon-twitter"></i></a>
+                </div>
+              </div>
+              <figcaption class="at-caption">
+                  <h4 class="at-member-name">David Cramer</h4>
+                  <p>Dropbox/Sentry</p>
+              </figcaption>
+            </figure>
+
+            <figure class="speaker-info col-lg-3">
+              <div class="speaker-rounded tupy">
+                <div class="speaker-networks">
+                  <a href="https://github.com/tupy" target="_blank"><i class="icon-github-circled"></i></a>
+                  <a href="https://twitter.com/tupydabahia" target="_blank"><i class="icon-twitter"></i></a>
+                </div>
+              </div>
+              <figcaption class="at-caption">
+                  <h4 class="at-member-name">Tupy</h4>
+                  <p>JusBrasil</p>
+              </figcaption>
+            </figure>
+
+            <figure class="speaker-info col-lg-3">
+              <div class="speaker-rounded marcel">
+                <div class="speaker-networks">
+                  <a href="https://github.com/marcelcaraciolo" target="_blank"><i class="icon-github-circled"></i></a>
+                  <a href="https://twitter.com/marcelcaraciolo" target="_blank"><i class="icon-twitter"></i></a>
+                </div>
+              </div>
+              <figcaption class="at-caption">
+                  <h4 class="at-member-name">Marcel Caraciolo</h4>
+                  <p>pythonbrasil.org</p>
+              </figcaption>
+          </figure>
+        </div>
+
       </article>
     </div>
+
+    <article class="container">
+      <div class="row centered">
+        <h2>Patrocinadores</h2>
+      </div>
+    </article><!-- /container -->
+
+    <article class="container">
+      <div class="row centered">
+        <button class="btn btn-info btn-lg">Inscreva-se</button>
+      </div>
+    </article><!-- /container -->
 
     <article class="container">
       <hr>
@@ -133,7 +149,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/pyne2014.min.js"></script>
   </body>
 </html>
 
