Adds small logo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><b>FLATTY</b></a>
+          <a href="#"><img class="logo-small" src="assets/images/logo-small.png" alt="Python Nordeste"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
