Fixes selected menu js

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a data-article="about" href="/#evento">Evento</a></li>
-            <li><a data-article="speakers" href="/#palestrantes">Palestrantes</a></li>
+            <li><a href="#" data-article="about">Evento</a></li>
+            <li><a href="#" data-article="speakers">Palestrantes</a></li>
             <li><a href="#">Inscreva-se</a></li>
-            <li><a data-article="papers" href="/#inscricoes">Submissão de palestras</a></li>
-            <li><a data-article="sponsors" href="/#patrocinadores">Patrocinadores</a></li>
-            <li><a data-article="contact" href="#contato">Contato</a></li>
+            <li><a href="#" data-article="papers">Submissão de palestras</a></li>
+            <li><a href="#" data-article="sponsors">Patrocinadores</a></li>
+            <li><a href="#">Contato</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -128,15 +128,15 @@
       </article>
     </div>
 
-    <article class="container sponsors">
-      <div class="row centered">
-        <h2>Patrocinadores</h2>
-      </div>
-    </article><!-- /container -->
-
     <article class="container papers">
       <div class="row centered">
         <h2>Submissão de palestras</h2>
+      </div>
+    </article><!-- /container -->
+
+    <article class="container sponsors">
+      <div class="row centered">
+        <h2>Patrocinadores</h2>
       </div>
     </article><!-- /container -->
 
@@ -144,10 +144,6 @@
       <div class="row centered">
         <button class="btn btn-info btn-lg">Inscreva-se</button>
       </div>
-    </article><!-- /container -->
-
-    <article class="contact">
-      <p class="centered">Deseja entrar em contato conosco? Envie um e-mail para <a href="mailto:joe@example.com" "python nordeste">email</a> e responderemos em breve.</p>
     </article><!-- /container -->
 
     <article class="container">
