--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" data-article="about">Evento</a></li>
             <li><a href="#" data-article="speakers">Palestrantes</a></li>
-            <li><a href="#">Inscreva-se</a></li>
-            <li><a href="#" data-article="papers">Submissão de palestras</a></li>
+            <li><a href="http://www.eventick.com.br/python-nordeste-2014" target="_blank">Inscreva-se</a></li>
+            <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
             <li><a href="#" data-article="sponsors">Patrocinadores</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
@@ -127,12 +127,6 @@
 
       </article>
     </div>
-
-    <article class="container papers">
-      <div class="row centered">
-        <h2>Submissão de palestras</h2>
-      </div>
-    </article><!-- /container -->
 
     <article class="container sponsors">
       <div class="row centered">
