Adds sponsors logos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="row centered">
           <img src="assets/images/logo.png" alt="Python Nordeste 2014">
           <p class="event-date">1 a 3 de maio</p>
+          <p class="headline">Python e Sol, tudo que você queria!</p>
         </div><!-- /row -->
       </div><!-- /container -->
     </div><!-- /headerwrap -->
@@ -128,20 +129,24 @@
       </article>
     </div>
 
-    <article class="container sponsors">
-      <div class="row centered">
-        <h2>Patrocinadores</h2>
-      </div>
-    </article><!-- /container -->
+    <div class="full-bg sponsors-wrap">
+      <article class="container sponsors">
+        <div class="row centered">
+          <h2>Patrocinadores</h2>
+          <div class="col-lg-4 evolux-logo">
+            <img src="assets/images/evolux.jpg" alt="">
+          </div>
+          <div class="col-lg-4 jusbrasil-logo">
+            <img src="assets/images/jusbrasil.png" alt="JusBrasil" width="270">
+          </div>
+          <div class="col-lg-4 globo-com-logo">
+            <img src="assets/images/globocom.png" alt="globo.com" width="150">
+          </div>
+        </div>
+      </article><!-- /container -->
+    </div>
 
     <article class="container">
-      <div class="row centered">
-        <button class="btn btn-info btn-lg">Inscreva-se</button>
-      </div>
-    </article><!-- /container -->
-
-    <article class="container">
-      <hr>
       <p class="centered">Python Nordeste - 2014</p>
     </article><!-- /container -->
 
