Improvements in the URL's hashes

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" data-article="about">Evento</a></li>
-            <li><a href="#" data-article="speakers">Palestrantes</a></li>
+            <li><a href="#" data-article="evento">Evento</a></li>
+            <li><a href="#" data-article="palestrantes">Palestrantes</a></li>
             <li><a href="http://www.eventick.com.br/python-nordeste-2014" target="_blank">Inscreva-se</a></li>
             <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
-            <li><a href="#" data-article="sponsors">Patrocinadores</a></li>
+            <li><a href="#" data-article="patrocinadores">Patrocinadores</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -59,14 +59,14 @@
       </div><!-- /container -->
     </div><!-- /headerwrap -->
 
-    <article class="container about">
+    <article class="container evento">
       <div class="">
           <h2>O evento</h2>
           <h4>Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Nessa edição, trazemos</h4>
       </div>
     </article>
 
-    <div class="speakers full-bg">
+    <div class="palestrantes full-bg">
 
       <article class="container">
 
@@ -130,7 +130,7 @@
     </div>
 
     <div class="full-bg sponsors-wrap">
-      <article class="container sponsors">
+      <article class="container patrocinadores">
         <div class="row centered">
           <h2>Patrocinadores</h2>
           <div class="col-lg-4 evolux-logo">
@@ -146,9 +146,9 @@
       </article><!-- /container -->
     </div>
 
-    <article class="container">
+    <footer class="container bottom-note">
       <p class="centered">Python Nordeste - 2014</p>
-    </article><!-- /container -->
+    </footer><!-- /container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
