Adds background to event section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
       </div><!-- /container -->
     </div><!-- /headerwrap -->
 
-    <article class="container evento">
-      <div class="">
-          <h2>O evento</h2>
-          <h4>Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Nessa edição, trazemos</h4>
-      </div>
-    </article>
+    <div class="event-wrap full-bg">
+      <article class="container">
+        <div class="">
+            <h2>O evento</h2>
+            <h4>Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Nessa edição, trazemos</h4>
+        </div>
+      </article>
+    </div>
 
     <div class="palestrantes full-bg">
 
