--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div><!-- /headerwrap -->
 
     <div class="event-wrap full-bg">
-      <article class="container">
+      <article class="container evento">
         <div class="">
             <h2>O evento</h2>
             <h4>Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Nessa edição, trazemos</h4>
