Adds links to sponsors site

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
         <div class="row centered">
           <h2>Patrocinadores</h2>
           <div class="col-lg-4 evolux-logo">
-            <img src="assets/images/evolux.jpg" alt="">
+            <a href="http://www.evolux.net.br/" target="_blank"><img src="assets/images/evolux.jpg" alt="Evolux"></a>
           </div>
           <div class="col-lg-4 jusbrasil-logo">
-            <img src="assets/images/jusbrasil.png" alt="JusBrasil" width="270">
+            <a href="http://www.jusbrasil.com.br/" target="_blank"><img src="assets/images/jusbrasil.png" alt="JusBrasil" width="270"></a>
           </div>
           <div class="col-lg-4 globo-com-logo">
-            <img src="assets/images/globocom.png" alt="globo.com" width="150">
+            <a href="http://www.globo.com/" target="_blank"><img src="assets/images/globocom.png" alt="globo.com" width="150"></a>
           </div>
         </div>
       </article><!-- /container -->
