Implements new about event section

--- a/index.html
+++ b/index.html
@@ -59,11 +59,22 @@
       </div><!-- /container -->
     </div><!-- /headerwrap -->
 
-    <div class="event-wrap full-bg">
+    <div class="event-wrap full-bg" data-speed="0.6">
       <article class="container evento">
-        <div class="">
+        <div class="event-desc">
             <h2>O evento</h2>
-            <h4>Python Nordeste é o maior encontro anual da região nordeste para a comunidade. Nessa edição, trazemos</h4>
+            <p>Python Nordeste é o maior evento regional voltado aos desenvolvedores da linguagem de programação Python (open-source). Criada pelos apaixonados por simplicidade, a comunidade Python nordestina tem a missão de cativar novos programadores para a linguagem e fortalecer a região com as tecnologias mais recentes usadas no Brasil e no mundo.</p>
+
+            <p>Aproveite o calor da Bahia para aprender algo novo com seus amigos.</p>
+        </div>
+        <div class="thumb-city">
+          <img src="assets/images/salvador-thumb1.jpg" alt="Python evento"/>
+        </div>
+        <div class="thumb-city">
+          <img src="assets/images/salvador-thumb2.jpg" alt="Nordeste"/>
+        </div>
+        <div class="thumb-city">
+          <img src="assets/images/salvador-thumb3.jpg" alt="Encontro Programação"/>
         </div>
       </article>
     </div>
