Improvements on sponsors section

--- a/index.html
+++ b/index.html
@@ -146,14 +146,25 @@
       <article class="container patrocinadores">
         <div class="row centered">
           <h2>Patrocinadores</h2>
-          <div class="col-lg-4 evolux-logo">
-            <a href="http://www.evolux.net.br/" target="_blank"><img src="assets/images/evolux.jpg" alt="Evolux"></a>
+          <div class="sponsors-list">
+            <p class="sponsor-cat">PLATINA</p>
+            <div class="col-lg-3 jusbrasil-logo sponsor-logo">
+              <a href="http://www.jusbrasil.com.br/" target="_blank"><img src="assets/images/jusbrasil.png" alt="JusBrasil" width="270"></a>
+            </div>
+            <div class="col-lg-3 globo-com-logo sponsor-logo">
+              <a href="http://www.globo.com/" target="_blank"><img src="assets/images/globocom.png" alt="globo.com" width="150"></a>
+            </div>
+            <div class="col-lg-3 evolux-logo sponsor-logo">
+              <a href="http://www.evolux.net.br/" target="_blank"><img src="assets/images/evolux.jpg" alt="Evolux"></a>
+            </div>
+            <div class="col-lg-3">
+              <div class="available-sponsor">
+                <p>Espaço disponível</p>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-4 jusbrasil-logo">
-            <a href="http://www.jusbrasil.com.br/" target="_blank"><img src="assets/images/jusbrasil.png" alt="JusBrasil" width="270"></a>
-          </div>
-          <div class="col-lg-4 globo-com-logo">
-            <a href="http://www.globo.com/" target="_blank"><img src="assets/images/globocom.png" alt="globo.com" width="150"></a>
+          <div class="col-lg-12 learn-more-sponsor">
+            <a href="resources/plano-patrocinio.pdf">Saiba como se tornar um patrocínador</a>
           </div>
         </div>
       </article><!-- /container -->
