Improvements on footer

--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
       </article><!-- /container -->
     </div>
 
-    <footer class="container bottom-note">
-      <p class="centered">Python Nordeste - 2014</p>
-    </footer><!-- /container -->
+    <div class="footer-wrap">
+      <footer class="container bottom-note">
+        <p class="centered">Python Nordeste 2014 | Salvador - Bahia - Brasil</p>
+      </footer><!-- /container -->
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
