Changes contact email

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="http://www.eventick.com.br/python-nordeste-2014" target="_blank">Inscreva-se</a></li>
             <li><a href="http://call4paperz.com/events/python-nordeste-2014" target="_blank">Submissão de palestras</a></li>
             <li><a href="#" data-article="patrocinadores">Patrocinadores</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="mailto:pyne2014@googlegroups.com?Subject=Python%20Nordeste">Contato</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
