Fix Marcel employwq

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
             <figcaption class="at-caption">
                 <h4 class="at-member-name">Marcel Caraciolo</h4>
-                <p>pythonbrasil.org</p>
+                <p>Associação Python Brasil</p>
             </figcaption>
           </figure>
 
