Add Eventick logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container">
         <div class="row centered">
           <img src="assets/images/logo.png" alt="Python Nordeste 2014">
-          <p class="event-date">1 a 3 de maio</p>
+          <p class="event-date">1 a 3 de maio de 2014</p>
           <p class="headline">Python e Sol, tudo que você queria!</p>
         </div><!-- /row -->
       </div><!-- /container -->
@@ -173,6 +173,13 @@
           </div>
           <div class="col-lg-12 learn-more-sponsor">
             <a href="resources/plano-patrocinio.pdf">Saiba como se tornar um patrocínador</a>
+          </div>
+          <div class="clearfix"></div>
+          <div class="sponsors-list">
+            <p class="sponsor-cat">APOIO</p>
+            <div class="col-lg-3 sponsor-logo">
+              <a href="http://www.eventick.com.br/" target="_blank"><img src="assets/images/eventick.png" alt="Eventick" width="150"></a>
+            </div>
           </div>
         </div>
       </article><!-- /container -->
