--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
 
+    <meta property="og:title" content="Python Nordeste 2014" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/images/logo-square.png" />
+    <meta property="og:url" content="http://pythonnordeste.org/" />
+    <meta property="og:site_name" content="Python Nordeste 2014" />
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
