Fixes site URL on og meta tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Python Nordeste 2014" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/images/logo-square.png" />
-    <meta property="og:url" content="http://pythonnordeste.org/" />
+    <meta property="og:url" content="http://2014.pythonnordeste.org/" />
     <meta property="og:site_name" content="Python Nordeste 2014" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
