Adds full path to url in the og:image:url meta tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta property="og:title" content="Python Nordeste 2014" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/images/logo-square.png" />
+    <meta property="og:image" content="http://2014.pythonnordeste.org/assets/images/logo-square.png" />
     <meta property="og:url" content="http://2014.pythonnordeste.org/" />
     <meta property="og:site_name" content="Python Nordeste 2014" />
 
