Adds description and keywords

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="O maior encontro anual da Região Nordeste para a comunidade que desenvolve utilizando a linguagem de programação open source Python. O evento é empenhado tanto para os novos usuários quanto para desenvolvedores plenos.">
+    <meta name="keywords" content="python, nordeste, evento, programação, bahia, salvador, desenvolvimento, desenvolvedor, opensource, encontro">
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
 
-    <title>Python Nordeste 2014</title>
+    <title>Python Nordeste 2014 | Salvador - Bahia</title>
     <link href="assets/css/main.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
 
