--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
 
     <div id="inscricoes" class="full-bg subscribe-wrap">
       <article class="container inscricoes">
-        <div class="row centered">
-          <h2>Inscrições</h2>
-          <iframe src="http://eventick.com.br/python-nordeste-2014/embedded" frameborder="0" height="435px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
+        <div class="col-lg-12 learn-more-sponsor">
+          <div class="row centered">
+            <h2>Inscrições</h2>
+            <iframe src="http://eventick.com.br/python-nordeste-2014/embedded" frameborder="0" height="435px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
+          </div>
         </div>
       </article>
     </div>
