Add observation for subscription.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h2>O evento</h2>
             <p>Python Nordeste é o maior evento regional voltado aos desenvolvedores da linguagem de programação Python (open-source). Criada pelos apaixonados por simplicidade, a comunidade Python nordestina tem a missão de cativar novos programadores para a linguagem e fortalecer a região com as tecnologias mais recentes usadas no Brasil e no mundo.</p>
 
-            <p>Aproveite o calor da Bahia para aprender algo novo com seus amigos.</p>
+            <p>Aproveite o calor da Bahia para aprender algo novo com quem <em>manja</em> do assunto.</p>
         </div>
         <div class="thumb-city">
           <img src="assets/images/salvador-thumb1.jpg" alt="Python evento"/>
@@ -146,12 +146,13 @@
 
     <div id="inscricoes" class="full-bg subscribe-wrap">
       <article class="container inscricoes">
-        <div class="col-lg-12 learn-more-sponsor">
+        <div class="col-lg-12">
           <div class="row centered">
             <h2>Inscrições</h2>
             <iframe src="http://eventick.com.br/python-nordeste-2014/embedded" frameborder="0" height="435px" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
           </div>
         </div>
+        <p>Observação: os minicursos serão vendidos separadamente.</p>
       </article>
     </div>
 
