Insert special offer to Matiz Hotel

--- a/hospedagem.html
+++ b/hospedagem.html
@@ -68,9 +68,17 @@
             <br />
             (<em><a href="http://www.booking.com/hotel/br/matiz-salvador.pt-br.html" target="_blank">Booking.com</a></em>)
             </p>
-            <p><strong>Informações: </strong><br />
-            Rua Doutor José Peroba, 244 (<a href="https://goo.gl/maps/u94fN" target="_blank">ver no mapa</a>)<br />
-            Tel.: (71) 3617-3300<br />
+
+            <h4>Tarifa Especial: Apartamento Executivo apenas R$ 189,00/dia*</h4>
+            <p>Café da manhã incluso. O pagamento deve ser feito diretamente no hotel, no momento do check-in.
+            <br />
+            Solicitar reservas nos e-mails: matizsalvador1(at)matizsalvador(dot)com(dot)br ou matizsalvador2(at)matizsalvador(dot)com(dot)br com título "Reserva Python Nordeste 2014".</em>
+            <br />
+            <small>*<em>Válido apenas para o período de 1 a 3 de maio de 2014 e de acordo com a disponibilidade do hotel.</em></small>
+            </p>
+            <h4>Informações: </h4>
+            <p>Rua Doutor José Peroba, 244 (<a href="https://goo.gl/maps/u94fN" target="_blank">ver no mapa</a>)<br />
+            Reservas: (71) 3617-3300<br />
             Website: <a href="http://www.matizsalvador.com.br/">http://www.matizsalvador.com.br/</a>
             </p>
 
